// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`axis renderer renders axis for each statement 1`] = `
<g
  class="axis-group"
>
  <g
    class="axis"
    data-axis="Statement 1"
  >
    <line
      class="axis-line"
      x1="0"
      x2="0"
      y1="0"
      y2="-100"
    />
    <text
      class="axis-label"
      text-anchor="middle"
      x="0"
      y="-110"
    >
      Statement 1
    </text>
  </g>
  <g
    class="axis"
    data-axis="Statement 2"
  >
    <line
      class="axis-line"
      x1="0"
      x2="100"
      y1="0"
      y2="-6.123233995736766e-15"
    />
    <text
      class="axis-label"
      text-anchor="start"
      x="110"
      y="-6.735557395310443e-15"
    >
      Statement 2
    </text>
  </g>
  <g
    class="axis"
    data-axis="Statement 3"
  >
    <line
      class="axis-line axis-line--highlighted"
      x1="0"
      x2="1.3471114790620885e-14"
      y1="0"
      y2="110"
    />
    <text
      class="axis-label axis-label--highlighted"
      text-anchor="middle"
      x="1.3471114790620885e-14"
      y="110"
    >
      Statement 3
    </text>
  </g>
  <g
    class="axis"
    data-axis="Statement 4"
  >
    <line
      class="axis-line"
      x1="0"
      x2="-100"
      y1="0"
      y2="1.8369701987210297e-14"
    />
    <text
      class="axis-label"
      text-anchor="end"
      x="-110"
      y="2.0206672185931328e-14"
    >
      Statement 4
    </text>
  </g>
</g>
`;

exports[`axis renderer when clicking axis label re-renders axis based on new state 1`] = `
<g
  class="axis-group"
>
  <g
    class="axis"
    data-axis="Statement 1"
  >
    <line
      class="axis-line"
      x1="0"
      x2="0"
      y1="0"
      y2="-100"
    />
    <text
      class="axis-label axis-label--dim"
      text-anchor="middle"
      x="0"
      y="-110"
    >
      Statement 1
    </text>
  </g>
  <g
    class="axis"
    data-axis="Statement 2"
  >
    <line
      class="axis-line"
      x1="0"
      x2="100"
      y1="0"
      y2="-6.123233995736766e-15"
    />
    <text
      class="axis-label axis-label--dim"
      text-anchor="start"
      x="110"
      y="-6.735557395310443e-15"
    >
      Statement 2
    </text>
  </g>
  <g
    class="axis"
    data-axis="Statement 3"
  >
    <line
      class="axis-line"
      x1="0"
      x2="1.2246467991473532e-14"
      y1="0"
      y2="100"
    />
    <text
      class="axis-label axis-label--dim"
      text-anchor="middle"
      x="1.3471114790620885e-14"
      y="110"
    >
      Statement 3
    </text>
  </g>
  <g
    class="axis"
    data-axis="Statement 4"
  >
    <line
      class="axis-line axis-line--highlighted"
      x1="0"
      x2="-110"
      y1="0"
      y2="2.0206672185931328e-14"
    />
    <text
      class="axis-label axis-label--highlighted"
      text-anchor="end"
      x="-110"
      y="2.0206672185931328e-14"
    >
      Statement 4
    </text>
  </g>
</g>
`;
